infra/kustomize/base/member-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member
spec:
  replicas: 1
  selector:
    matchLabels:
      app: member
  template:
    metadata:
      labels:
        app: member
    spec:
      containers:
        - name: member
          image: ghcr.io/cmd137/nekocafe-member:v1.0.0
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
