infra/kustomize/base/reservation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservation
      release: stable
  template:
    metadata:
      labels:
        app: reservation
        release: stable
    spec:
      containers:
        - name: reservation
          image: ghcr.io/cmd137/nekocafe-reservation:v1.0.0
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
