infra/kustomize/base/member-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: member
spec:
  selector:
    app: member
  ports:
    - name: http
      port: 80
      targetPort: 8080
