infra/kustomize/base/reservation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reservation
spec:
  selector:
    app: reservation
    release: stable
  ports:
    - name: http
      port: 80
      targetPort: 8080
