infra/kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nekocafe
spec:
  ingressClassName: nginx
  rules:
    - host: nekocafe.local
      http:
        paths:
          - path: /reservation/v1
            pathType: Prefix
            backend:
              service:
                name: reservation
                port:
                  number: 80
          - path: /member/v1
            pathType: Prefix
            backend:
              service:
                name: member
                port:
                  number: 80
